<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/intervalos">
        <ListPreference
            android:defaultValue="5"
            android:entries="@array/intervalo_curto_minutos"
            android:entryValues="@array/intervalo_curto_valor"
            android:icon="@drawable/ic_access_time_black"
            android:key="intervalo_curto"
            android:summary="@string/info_define_tempo_intervalo_curto"
            android:title="@string/intervalo_curto" />

        <ListPreference
            android:defaultValue="30"
            android:entries="@array/intervalo_longo_minutos"
            android:entryValues="@array/intervalo_longo_valor"
            android:icon="@drawable/ic_access_time_black"
            android:key="intervalo_longo"
            android:summary="@string/info_define_tempo_intervalo_longo"
            android:title="@string/intervalo_longo" />

        <EditTextPreference
            android:defaultValue="25"
            android:dialogIcon="@drawable/ic_access_time_black"
            android:icon="@drawable/ic_access_time_black"
            android:inputType="number"
            android:enabled="false"
            android:key="intervalo_longo"
            android:summary="@string/info_tempo_concentracao_25_minutos"
            android:title="@string/concentracao" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notificacoes">
        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_notifications_black"
            android:key="notificacao_intervalo_curto"
            android:summaryOff="@string/info_nao_notificar_intervalo_curto"
            android:summaryOn="@string/info_notificar_intervalo_curto"
            android:title="@string/intervalo_curto" />

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_notifications_black"
            android:key="notificacao_intervalo_longo"
            android:summaryOff="@string/info_nao_notificar_intervalo_longo"
            android:summaryOn="@string/info_notificar_intervalo_longo"
            android:title="@string/intervalo_longo" />

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_notifications_black"
            android:key="notificacao_concentração"
            android:summaryOff="@string/info_nao_notificar_concentracao"
            android:summaryOn="@string/info_notificar_concentracao"
            android:title="@string/concentracao" />
    </PreferenceCategory>

</PreferenceScreen>